--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,16 +18,10 @@
     "node": "^18.8.0 || >=20.6.0"
   },
   "scripts": {
-    "clean": "rimraf .eslintcache",
-    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "start": "platformatic start"
   },
   "dependencies": {
-    "platformatic": "^1.1.1"
+    "platformatic": "^1.2.0"
   },
-  "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.17",
-    "eslint": "^8.50.0",
-    "rimraf": "^5.0.5"
-  }
+  "devDependencies": {}
 }
