--- a/packages/api/services/quotes/package.json
+++ b/packages/api/services/quotes/package.json
@@ -21,18 +21,18 @@
     "node": "^18.8.0 || >=20.6.0"
   },
   "scripts": {
-    "start": "platformatic start",
-    "clean": "rimraf dist",
+    "clean": "trash dist",
     "build": "platformatic compile",
+    "start": "platformatic start",
     "test": "tsc && node --test dist/test/*/*.test.js"
   },
   "dependencies": {
-    "@platformatic/service": "^1.1.1",
+    "@platformatic/service": "^1.2.0",
     "fastify": "^4.23.2",
-    "platformatic": "^1.1.1"
+    "platformatic": "^1.2.0"
   },
   "devDependencies": {
-    "rimraf": "^5.0.5",
+    "trash-cli": "^5.0.0",
     "typescript": "~5.2.2"
   }
 }
