--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,9 +35,7 @@
   },
   "scripts": {
     "build": "wireit",
-    "clean": "rimraf .eslintcache .wireit dist coverage",
-    "eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
-    "lint:size": "wireit",
+    "clean": "trash .wireit dist coverage",
     "test": "wireit",
     "test:cli": "wireit",
     "test:watch": "wireit"
@@ -48,14 +46,10 @@
     "serialize-error": "^11.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.10",
-    "@size-limit/file": "^9.0.0",
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.8.4",
     "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.50.0",
     "find-monorepo-root": "^1.0.3",
-    "rimraf": "^5.0.5",
-    "size-limit": "^9.0.0",
+    "trash-cli": "^5.0.0",
     "tsup": "^7.2.0",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6",
@@ -81,12 +75,6 @@
           "script": "../config:build",
           "cascade": false
         }
-      ]
-    },
-    "lint:size": {
-      "command": "size-limit",
-      "dependencies": [
-        "build"
       ]
     },
     "test": {
@@ -115,12 +103,5 @@
         "build"
       ]
     }
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "1KB",
-      "brotli": true
-    }
-  ]
+  }
 }
