--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint:eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
     "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\" ",
     "lint:spell": "cspell .",
+    "setup": "node scripts/setup.js",
     "system:info": "envinfo --system --binaries --browsers",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
@@ -54,7 +55,7 @@
     "eslint": "^8.51.0",
     "eslint-flat-config-viewer": "^0.1.0",
     "husky": "^8.0.3",
-    "knip": "^2.33.0",
+    "knip": "^2.33.1",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.9.0",
     "secretlint": "^7.0.7",
