--- a/packages/api/services/quotes/package.json
+++ b/packages/api/services/quotes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@temp/api/quotes",
+  "name": "@temp/api-quotes",
   "version": "0.0.0",
   "private": true,
   "description": "TEMPL api service quotes",
@@ -27,9 +27,9 @@
     "test": "tsc && node --test dist/test/*/*.test.js"
   },
   "dependencies": {
-    "@platformatic/service": "^1.2.0",
+    "@platformatic/service": "^1.3.0",
     "fastify": "^4.23.2",
-    "platformatic": "^1.2.0"
+    "platformatic": "^1.3.0"
   },
   "devDependencies": {
     "trash-cli": "^5.0.0",
