--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "yarn": "This project is configured to use pnpm"
   },
   "scripts": {
-    "all": "pnpm clean && pnpm deps:update && pnpm lint && pnpm changelog && pnpm build && pnpm -C scripts size:generate && pnpm test:all && pnpm system:info && pnpm update:third_party",
+    "all": "node scripts/js/exec/all.js",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean && trash .pnpm-store coverage temp && empty-trash",
     "changelog": "auto-changelog -p",
@@ -24,12 +24,12 @@
     "eslint:viewer": "eslint-flat-config-viewer",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
-    "lint": "pnpm lint:eslint && knip --no-gitignore --no-exit-code && pnpm lint:md && pnpm lint:secret && size-limit && pnpm lint:spell",
+    "lint": "node scripts/js/exec/lint.js",
     "lint:md": "pnpm -C scripts lint:md",
     "lint:eslint": "eslint --color --cache --fix --cache-location .eslintcache .",
-    "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\" ",
+    "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\"",
     "lint:spell": "cspell .",
-    "setup": "node scripts/setup.js",
+    "_setup_": "node scripts/js/exec/setup.js",
     "system:info": "envinfo --system --binaries --browsers",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
