--- a/packages/api/services/main/package.json
+++ b/packages/api/services/main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@temp/api/composer",
+  "name": "@temp/api-composer",
   "private": true,
   "description": "TEMPL api composer",
   "license": "MIT",
@@ -20,7 +20,7 @@
     "start": "platformatic start"
   },
   "dependencies": {
-    "platformatic": "^1.2.0"
+    "platformatic": "^1.3.1"
   },
   "devDependencies": {
     "trash-cli": "^5.0.0"
