--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,22 +15,35 @@ permissions:
   pull-requests: write
 
 jobs:
-  clean:
+
+  trivy_scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+      - name: Run Trivy vulnerability scanner in fs mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: .
+          scan-type: fs
+          scan-ref: .
+          skip-dirs: third_party
+          output: dependency-results.sbom.json
+          github-pat: ${{ secrets.GITHUB_TOKEN }}
+
+  init:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
         run: pnpm i --no-frozen-lockfile
+
+      # Lint
       - name: Lint All
         run: pnpm run clean
 
-  build_lint:
-    runs-on: ubuntu-latest
-    needs: [clean]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
+      # Build
       - name: Build
         run: |
           pnpm -C scripts ci:copy:env
@@ -41,12 +54,7 @@ jobs:
       - name: Dist validation
         run: pnpm -C scripts ci:check:dist
 
-  test:
-    runs-on: ubuntu-latest
-    needs: [build_lint]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
+      # Test
       - name: Test
         run: pnpm run test
       - name: Codecov
@@ -54,32 +62,7 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  test_cli:
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node_version: [18]
-      fail-fast: false
-    needs: [build_lint]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
-        with:
-          node-version: ${{ matrix.node_version }}
-      - name: Test CLI
-        run: pnpm run test:cli
-
-  size_report:
-    runs-on: ubuntu-latest
-    if: github.actor != 'dependabot[bot]'
-    permissions:
-      contents: write
-    needs: [build_lint]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
+      # size_report
       - name: Download Previous Size Data
         uses: dawidd6/action-download-artifact@v2
         with:
@@ -102,6 +85,29 @@ jobs:
         with:
           body: ${{ steps.size-report.outputs.content }}
 
+  test_cli:
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node_version: [18]
+      fail-fast: false
+    needs: [init]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+        with:
+          node-version: ${{ matrix.node_version }}
+      - name: Test CLI
+        run: pnpm run test:cli
+
+  action-timeline:
+    needs: [init, test_cli, trivy_scan]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: Kesin11/actions-timeline@v1
+
   triage:
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
@@ -116,18 +122,3 @@ jobs:
         with:
           pass_on_octokit_error: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  trivy_scan:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-      - name: Run Trivy vulnerability scanner in fs mode
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: .
-          scan-type: fs
-          scan-ref: .
-          skip-dirs: third_party
-          output: dependency-results.sbom.json
-          github-pat: ${{ secrets.GITHUB_TOKEN }}
