--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,11 +4,19 @@ services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
-      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+      - "127.0.0.1:4510-4559:4510-4559"  # External services port range
+      - "127.0.0.1:53:53"                # DNS config
+      - "127.0.0.1:53:53/udp"            # DNS config
+      - "127.0.0.1:443:443"              # LocalStack HTTPS Gateway
     environment:
       - DEBUG=${DEBUG-}
+      - PERSISTENCE=${PERSISTENCE-}
+      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
       - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
