--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint:viewer": "eslint-flat-config-viewer",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "pnpm deps:update",
     "lint": "node scripts/js/lint.js",
     "_setup_": "node scripts/js/setup.js",
     "system:info": "envinfo --system --binaries --browsers",
@@ -40,18 +41,18 @@
   ],
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.24",
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^9.0.0",
     "auto-changelog": "^2.4.0",
     "cspell": "^7.3.8",
     "empty-trash-cli": "^2.0.0",
     "envinfo": "^7.10.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-flat-config-viewer": "^0.1.0",
     "husky": "^8.0.3",
-    "knip": "^2.33.4",
+    "knip": "^2.38.1",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.9.2",
     "secretlint": "^7.0.7",
