--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "templ",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.10.0",
+  "packageManager": "pnpm@8.12.1",
   "description": "A modern monorepo project template",
   "author": "Joydip Roy <joydipand@gmail.com> (https://github.com/rjoydip)",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "yarn": "This project is configured to use pnpm"
   },
   "scripts": {
-    "all": "node scripts/js/all.js",
+    "all": "pnpm -C scripts all",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean && trash .pnpm-store coverage temp && empty-trash",
     "changelog": "auto-changelog -p",
@@ -25,8 +25,9 @@
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "pnpm deps:update",
-    "lint": "node scripts/js/lint.js",
-    "_setup_": "node scripts/js/setup.js",
+    "lint": "pnpm -C scripts lint",
+    "size": "pnpm -C scripts size:generate",
+    "_setup_": "pnpm -C scripts _setup_",
     "system:info": "envinfo --system --binaries --browsers",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
@@ -41,21 +42,21 @@
   ],
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.24",
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
-    "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@secretlint/secretlint-rule-preset-recommend": "^7.2.0",
     "@size-limit/file": "^9.0.0",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.3.8",
+    "cspell": "^7.3.9",
     "empty-trash-cli": "^2.0.0",
-    "envinfo": "^7.10.0",
-    "eslint": "^8.52.0",
-    "eslint-flat-config-viewer": "^0.1.0",
+    "envinfo": "^7.11.0",
+    "eslint": "^8.55.0",
+    "eslint-flat-config-viewer": "^0.1.3",
     "husky": "^8.0.3",
-    "knip": "^2.38.4",
+    "knip": "^2.43.0",
     "nano-staged": "^0.8.0",
-    "pnpm": "^8.10.0",
-    "secretlint": "^7.0.7",
+    "pnpm": "^8.12.1",
+    "secretlint": "^7.2.0",
     "size-limit": "^9.0.0",
     "taze": "^0.11.4",
     "trash-cli": "^5.0.0"
