--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "yarn": "This project is configured to use pnpm"
   },
   "scripts": {
-    "all": "pnpm -C scripts all",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean && trash .pnpm-store coverage temp && empty-trash",
     "changelog": "auto-changelog -p",
@@ -45,20 +44,20 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@secretlint/secretlint-rule-preset-recommend": "^7.2.0",
-    "@size-limit/file": "^9.0.0",
+    "@size-limit/file": "^11.0.1",
     "auto-changelog": "^2.4.0",
     "cspell": "^7.3.9",
     "empty-trash-cli": "^2.0.0",
     "envinfo": "^7.11.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-flat-config-viewer": "^0.1.3",
     "husky": "^8.0.3",
     "knip": "^2.43.0",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.12.1",
     "secretlint": "^7.2.0",
-    "size-limit": "^9.0.0",
-    "taze": "^0.11.4",
+    "size-limit": "^11.0.1",
+    "taze": "^0.13.0",
     "trash-cli": "^5.0.0"
   },
   "auto-changelog": {
@@ -72,10 +71,7 @@
       "cspell .",
       "secretlint --secretlintignore .gitignore \"**/*\""
     ],
-    "*.{css, js,ts,jsx,tsx,md,json}": "eslint --color --cache --fix --cache-location .eslintcache .",
-    "*.md": [
-      "pnpm -C scripts lint:md"
-    ]
+    "*.{css, js,ts,jsx,tsx,md,json}": "eslint --color --cache --fix --cache-location .eslintcache ."
   },
   "knip": {
     "workspaces": {
