--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -29,10 +29,9 @@
     "node": "^18.8.0 || >=20.6.0"
   },
   "scripts": {
-    "build": "wireit",
-    "clean": "trash .wireit dist docs coverage",
-    "test": "wireit",
-    "test:watch": "wireit"
+    "build": "tsup",
+    "clean": "trash dist docs coverage",
+    "test": "vitest run"
   },
   "dependencies": {
     "bundle-require": "^4.0.2",
@@ -41,51 +40,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.10.5",
     "@vitest/coverage-v8": "^0.34.6",
     "trash-cli": "^5.0.0",
     "tsup": "^7.3.0",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^0.34.6",
-    "wireit": "^0.14.1"
-  },
-  "wireit": {
-    "build": {
-      "command": "tsup",
-      "files": [
-        "src/**/*.ts",
-        "tsup.config.ts",
-        "tsconfig.json"
-      ],
-      "output": [
-        "dist/**"
-      ],
-      "dependencies": [
-        {
-          "script": "../logger:build",
-          "cascade": false
-        }
-      ]
-    },
-    "test": {
-      "command": "vitest run",
-      "files": [
-        "test/**.test.ts",
-        "vitest.config.ts"
-      ],
-      "dependencies": [
-        "build"
-      ]
-    },
-    "test:watch": {
-      "command": "vitest run --watch",
-      "files": [
-        "test/**.test.ts",
-        "vitest.config.ts"
-      ],
-      "dependencies": [
-        "build"
-      ]
-    }
+    "vitest": "^0.34.6"
   }
 }
